k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hash-app
  namespace: birthday
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hash-app
  type: ClusterIP
